[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>", "Markus Mayer <widemeadows@gmail.com>"]
description = "computes the short-time fourier transform on streaming data"
documentation = "https://snd.github.io/stft/stft/index.html"
homepage = "https://github.com/sunsided/stft"
keywords = ["dsp", "fft", "stream", "data", "fourier"]
license = "MIT OR Apache-2.0"
name = "ruststft"
readme = "README.md"
repository = "https://github.com/sunsided/stft.git"
version = "0.3.0"
edition = "2021"

[dependencies]
apodize = "1.0.0"
num = "0.4.0"
rustfft = "6.1.0"
strider = "0.1.3"

[dev-dependencies]
criterion = "0.5.1"
approx = "0.5.1"

[[bench]]
name = "lib"
harness = false
